--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div id="loader">
-        <div class="dot"></div>
+      <div class="dot"></div>
       <div class="dot"></div>
       <div class="dot"></div>
       <div class="dot"></div>
@@ -11,5 +11,9 @@
       <div class="dot"></div>
       <div class="loading"></div>
     </div>
+
+    <p class="spinner-message" *ngIf="message && message !== ''">
+      {{message}}
+    </p>
   </div>
 </div>
