--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -2,9 +2,9 @@
   <div class="mx-auto col-10">
     <h5>TODO list</h5>
     <hr>
-      <ul class="list-group mb-3">
-        <app-todo-item *ngFor="let todo of todoList" [todoItem]="todo" (todoDelete)="deleteTodo($event)" (todoEdit)="editTodo($event)"></app-todo-item>
-      </ul>
+    <ul class="list-group mb-3">
+      <app-todo-item id="todo-item" *ngFor="let todo of todoList" [todoItem]="todo" (todoDelete)="deleteTodo($event)" (todoEdit)="editTodo($event)"></app-todo-item>
+    </ul>
   </div>
 
   <hr>
